# SQPnP_G

./: .gitignore  CLEAN_README.md  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  adapter.py  adapter_faciallandmark.py  adapter_mediapipe.py  clean_example_cli.cpp  example_usage.py  face_model_all.npy  test_adapter.py  test_sqpnp.py  update_repository.sh
data/: camera_fisheye.txt  camera_pinhole_distorted.txt  camera_pinhole_simple.txt  rs32D.txt  rsK.txt
nets/: base_model.py  faciallandmark2d_model.py  yolox_detection_model.py
python_bindings/: CMakeLists.txt  README.md  example_usage.py  install.sh  pyproject.toml  requirements.txt  setup.py  sqpnp_bindings.cpp  test_sqpnp.py
sqpnp/: CMakeLists.txt  types.h  unified_sqpnp.h
