[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.6.0", "numpy>=1.19.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqpnp_python"
version = "1.0.0"
description = "Python bindings for SQPnP - Efficient Perspective-n-Point Algorithm"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Manoj Pandey", email = "manojpandey@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Computer Vision",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "pybind11>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sqpnp-python"
Repository = "https://github.com/yourusername/sqpnp-python"
Issues = "https://github.com/yourusername/sqpnp-python/issues" 